Support for ragged tensors
(Variable size tensors in a batch)
Working KITTI training visualization

--- a/python/open3d/visualization/tensorboard_plugin/frontend/style.css
+++ b/python/open3d/visualization/tensorboard_plugin/frontend/style.css
@@ -81,6 +81,14 @@
   text-align: center;
 }
 
+.webrtc td:first-child {
+  text-align: left;
+}
+
+.webrtc td:last-child {
+  text-align: right;
+}
+
 .webrtc button {
   width: 3em;
   display: inline;
